glance (2:12.0.0~rc2-1) unstable; urgency=medium

  * New upstream release.
  * Uploading to unstable.
  * Updated ja.po debconf translation (Closes: #815957).

 -- Thomas Goirand <zigo@debian.org>  Tue, 05 Apr 2016 10:22:46 +0200

glance (2:12.0.0~rc1-2) experimental; urgency=medium

  * Do not use Keystone admin auth token to register API endpoints.

 -- Thomas Goirand <zigo@debian.org>  Tue, 29 Mar 2016 13:01:47 +0000

glance (2:12.0.0~rc1-1) experimental; urgency=medium

  * New upstream release.
  * Bumped python-glance-store (build-)depends version.

 -- Thomas Goirand <zigo@debian.org>  Tue, 22 Mar 2016 13:14:34 +0100

glance (2:12.0.0~b3-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Also installs /usr/bin/glance-glare.
  * Also generates glance-glare.conf.
  * Standards-Version: 3.9.7 (no change).

 -- Thomas Goirand <zigo@debian.org>  Fri, 04 Mar 2016 14:34:37 +0800

glance (2:12.0.0~b2-3) experimental; urgency=medium

  * Better config file generation.
  * Make build reproducible (Closes: #807475).
  * VCS URLs using HTTPS.

 -- Thomas Goirand <zigo@debian.org>  Sat, 06 Feb 2016 06:15:09 +0000

glance (2:12.0.0~b2-2) experimental; urgency=medium

  * Fixed use of -S flag in dpkg-parsechangelog, incompatible with Trusty.
  * Added build-depends on git, due to its use in sphinx-build.
  * Bump EPOCH to align with Ubuntu.
  * Fixed rabbitmq credential in debconf to use the oslo_messaging_rabbit
    section.

 -- Thomas Goirand <zigo@debian.org>  Mon, 25 Jan 2016 23:31:11 +0800

glance (1:12.0.0~b2-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Removing /usr/bin/glance-artifacts to glance-common as it's gone from
    upstream entry-points.
  * glance-api depends on adduser to avoid a lintian warning.
  * Update namespaces for config file generation.
  * Fixed debian/copyright ordering and years.
  * Unit test fix: