@@ -3,6 +3,7 @@ glance (2:12.0.0~rc2-1) unstable; urgency=medium
   * New upstream release.
   * Uploading to unstable.
   * Updated ja.po debconf translation (Closes: #815957).
+  * Using testr directly to run tests.
 
  -- Thomas Goirand <zigo@debian.org>  Tue, 05 Apr 2016 10:22:46 +0200
 
